sass/components/_share.scss
.share {

    display: none;

    @media screen and (min-width: map-get($grid-breakpoints, "lg")) {
        position: absolute;
        display: block;
        right: 0;
        top: 50%;
        z-index: 100;


        &__btn {
            font-weight: bold;
            display: block;
            transform: rotate(270deg);
            cursor: pointer;    

        }

        &__highlight {
            position: relative;

            &::after {
                content: ""; 
                background: $crab;
                display: block;
                position: absolute;
                height: $spacer * 0.6;
                width: 116%;
                left: -8%;
                top: 60%;
                z-index: -1;
            }
        }

        &__wrapper {
            display: none;
            position: absolute;
            background-color: $white;
            border-radius: $spacer * 0.25;
            transform: translate(-60%, -50%);
            animation-duration: 350ms;
            animation-name: fadeIn;
            animation-timing-function: ease-out;

            &::after {
                content: '';
                position: absolute;
                right: 0;
                top: 50%;
                width: 0;
                height: 0;
                border: 10px solid transparent;
                border-left-color: $white;
                border-right: 0;
                margin-top: -10px;
                margin-right: -10px;
            }
        }

        &__link {
            color: $crab;

            &:hover {
                color: darken($crab, 25%);
            }
        }

        &__item {
            font-size: 24px;
            padding: 8px;
            text-align: center;
        }

        &--active {
            .share__wrapper {
                display: block;
            }
        }
    }
}

